# prettychars

./: Cargo.toml  README.md  TERMINAL_COMPATIBILITY.md
.github/workflows/: ci.yml  release.yml
examples/: chaining.rs  chessboard.rs  dashboard.rs
src/: glyphs.rs  lib.rs  styles.rs
